Re-enable broken swipe events for flipping pages on mobile devices. Fix navigation button position on screens < 768px.

--- a/resources/css/style.less
+++ b/resources/css/style.less
@@ -350,6 +350,11 @@ ol.breadcrumb li:before {
             font-size: 40px;
             text-align: center;
         }
+        
+        @media (max-width: 768px) {
+            position: absolute;
+            top: 20px;
+        }
     }
 
     .nav-next {
